:sparkles: Added Home page;
Added Home page;

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,7 @@
 /** @format */
 
 .App {
-    text-align: center;
+    text-align: left;
 }
 
 .App-logo {
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-    background-color: #282c34;
+    background-color: #eff2f7;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -17,6 +17,7 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+   
 }
 
 .App-link {
