--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,183 +1,181 @@
 /**
- * /*!------------------------------------------------------------------
- * [MAIN STYLESHEET]
+ * /*------------------------------------------------------------------
+ * [TABLE OF CONTENTS]
  * 
- * PROJECT:	Biztrox | Business HTML5 Template
- * VERSION:	1.0.0
+ * 1. BASE
+ * 
+ *     1.1. Typography
+ *     1.2. Common Styles
+ *         1.2.1 Page Title
+ *         1.2.1 404 page
+ *     1.3 Button Style
+ * 
+ * 2. NAVIGATION
+ * 
+ * 3. HERO AREA
+ * 
+ * 4. SKILL SECTION
+ * 
+ *     4.1. fun-facts
+ *     4.2. counter
+ * 
+ * 5. PROGRESS SECTION
+ * 
+ *     5.1. progressbar title
+ *     5.2. progressbar value
+ * 
+ * 6. MISSION SECTION
+ * 
+ *     6.1. card header
+ *     6.2. card body
+ * 
+ * 7. PROMO VIDEO SECTION
+ * 
+ * 8. TESTIMONIAL SECTION
+ * 
+ *     8.1. testimonial slider
+ *     8.2. testimonial content
+ * 
+ * 9. CONTACT
+ * 
+ *     9.1. Address Item
+ *     9.2. Google Map
+ *     9.3. COntact Form
+ * 
+ * 10. CLIENT LOGO SLIDER
+ * 
+ * 11. FUN-FACTS SECTION
+ * 
+ * 12. CONSULTATION SECTION
+ * 
+ *     12.1 background image
+ *     12.2 form-control
+ * 
+ * 13. ABOUT SECTION
+ * 
+ *     13.1 about content
+ *     13.2 about item
+ *     13.3 about content 2
+ *     13.4 about video
+ *     13.5 about content 3
+ *     13.6 about slider
+ *     13.7 philosophy
+ *     13.8 ceo
+ * 
+ *         13.8.1 ceo item
+ *         13.8.1 ceo content
+ *         13.8.1 ceo content-2
+ * 
+ * 
+ * 14. SERVICE SECTION
+ * 
+ *     14.1 service item
+ *     14.2 service item 2
+ *     14.3 clients
+ *     14.4 Process
+ *     14.5 service menu
+ *     14.6 service brochure
+ *     14.7 service schedule
+ *     14.8 service consultation
+ *     14.9 service single
+ * 
+ *         14.9.1 service single image
+ *         14.9.2 service single content
+ *         14.9.3 service single list
+ *         14.9.4 service single benefit
+ *         14.9.5 widget
+ * 
+ * 15. WORK SECTION
+ * 
+ *     15.1 work slider
+ *     15.2 slick dots
+ * 
+ * 16. CALL TO ACTION
+ * 
+ * 17. TEAM SECTION
+ * 
+ *     17.1 team item
+ *     17.2 team content
+ *     17.3 team member
+ *     17.4 team single
+ * 
+ *         17.4.1 team member info item
+ *         17.4.2 team member details
+ * 
+ * 18. PRICING SECTION
+ * 
+ *     18.1 pricing item
+ * 
+ * 19. PROJECT SECTION
+ * 
+ *     19.1 project menu
+ *     19.2 project item
+ *     19.3 project single
+ * 
+ *         19.3.1 project overview
+ *         19.3.2 case study
+ *         19.3.3 project single content
+ * 
+ *     19.4 nav-tabs
+ *     19.5 tab content
+ * 
+ * 20. FAQ SECTION
+ * 
+ * 21. BLOG SECTION
+ * 
+ *     21.1 blog item
+ *     21.2 blog content
+ *     21.3 blog content 2
+ *     21.4 blog post
+ * 
+ *         21.4.1 post slider
+ *         21.4.2 post video
+ *         21.4.3 pagination
+ *         21.4.4 sidebar
+ * 
+ *     21.5 blog single
+ * 
+ *         21.5.1 blog single container
+ *         21.5.2 blog single content
+ *         21.5.3 blog single list
+ *         21.5.4 blog single testimonial
+ *         21.5.5 share tags
+ *         21.5.6 comments
+ *         21.5.7 blog-sidebar
+ * 
+ * 22. CONTACT SECTION
+ * 
+ *     22.1 contact item
+ *     22.2 contact form
+ *     22.3 google map
+ * 
+ * 23. SIGNUP WRAPPER
+ * 
+ *     23.1 signup greetngs
+ *     23.2 signup form
+ * 
+ * 24. COMMING SOON
+ * 
+ *     24.1 SYOtimer
+ * 
+ * 25. FOOTER SECTION
+ * 
+ *     25.1 social link
+ *     25.2 footer link
+ *     25.3 subcription
+ *     25.4 copyright
+ *     25.5 back to top
  * -------------------------------------------------------------------
  *
  * @format
  */
 
-/*------------------------------------------------------------------
-[TABLE OF CONTENTS]
-
-1. BASE
-
-    1.1. Typography
-    1.2. Common Styles
-        1.2.1 Page Title
-        1.2.1 404 page
-    1.3 Button Style
-
-2. NAVIGATION
-
-3. HERO AREA
-
-4. SKILL SECTION
-
-    4.1. fun-facts
-    4.2. counter
-
-5. PROGRESS SECTION
-
-    5.1. progressbar title
-    5.2. progressbar value
-
-6. MISSION SECTION
-
-    6.1. card header
-    6.2. card body
-
-7. PROMO VIDEO SECTION
-
-8. TESTIMONIAL SECTION
-
-    8.1. testimonial slider
-    8.2. testimonial content
-
-9. CONTACT
-
-    9.1. Address Item
-    9.2. Google Map
-    9.3. COntact Form
-
-10. CLIENT LOGO SLIDER
-
-11. FUN-FACTS SECTION
-
-12. CONSULTATION SECTION
-
-    12.1 background image
-    12.2 form-control
-
-13. ABOUT SECTION
-
-    13.1 about content
-    13.2 about item
-    13.3 about content 2
-    13.4 about video
-    13.5 about content 3
-    13.6 about slider
-    13.7 philosophy
-    13.8 ceo
-
-        13.8.1 ceo item
-        13.8.1 ceo content
-        13.8.1 ceo content-2
-
-
-14. SERVICE SECTION
-
-    14.1 service item
-    14.2 service item 2
-    14.3 clients
-    14.4 Process
-    14.5 service menu
-    14.6 service brochure
-    14.7 service schedule
-    14.8 service consultation
-    14.9 service single
-
-        14.9.1 service single image
-        14.9.2 service single content
-        14.9.3 service single list
-        14.9.4 service single benefit
-        14.9.5 widget
-
-15. WORK SECTION
-
-    15.1 work slider
-    15.2 slick dots
-
-16. CALL TO ACTION
-
-17. TEAM SECTION
-
-    17.1 team item
-    17.2 team content
-    17.3 team member
-    17.4 team single
-
-        17.4.1 team member info item
-        17.4.2 team member details
-
-18. PRICING SECTION
-
-    18.1 pricing item
-
-19. PROJECT SECTION
-
-    19.1 project menu
-    19.2 project item
-    19.3 project single
-
-        19.3.1 project overview
-        19.3.2 case study
-        19.3.3 project single content
-
-    19.4 nav-tabs
-    19.5 tab content
-
-20. FAQ SECTION
-
-21. BLOG SECTION
-
-    21.1 blog item
-    21.2 blog content
-    21.3 blog content 2
-    21.4 blog post
-
-        21.4.1 post slider
-        21.4.2 post video
-        21.4.3 pagination
-        21.4.4 sidebar
-
-    21.5 blog single
-
-        21.5.1 blog single container
-        21.5.2 blog single content
-        21.5.3 blog single list
-        21.5.4 blog single testimonial
-        21.5.5 share tags
-        21.5.6 comments
-        21.5.7 blog-sidebar
-
-22. CONTACT SECTION
-
-    22.1 contact item
-    22.2 contact form
-    22.3 google map
-
-23. SIGNUP WRAPPER
-
-    23.1 signup greetngs
-    23.2 signup form
-
-24. COMMING SOON
-
-    24.1 SYOtimer
-
-25. FOOTER SECTION
-
-    25.1 social link
-    25.2 footer link
-    25.3 subcription
-    25.4 copyright
-    25.5 back to top
--------------------------------------------------------------------*/
 /* 1.1 typography */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Poppins:300,400,500,600,700|Work+Sans:400,500,600");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Work+Sans:400,500,600");
+@font-face {
+    font-family: "Public Sans";
+    src: local("Public Sans"), url("../fonts/PublicSans/PublicSans-Regular.woff") format("woff");
+}
 body {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -191,8 +189,7 @@ p,
     color: #666;
     font-size: 14px;
     line-height: 25px;
-    font-family: "Open Sans", sans-serif;
-    text-align: left;
+    font-family: "Public Sans", sans-serif;
 }
 
 h1,
@@ -246,7 +243,7 @@ h6,
 /* 1.3 Button style */
 .btn {
     font-size: 14px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     text-transform: capitalize;
     padding: 16px 44px;
     border-radius: 35px;
@@ -434,7 +431,7 @@ button {
 
 .section-title-sm {
     margin-bottom: 10px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 600;
     color: #666;
 }
@@ -755,7 +752,8 @@ button {
 }
 
 .bg-gray {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    background-color: #f6f4f6;
 }
 
 .bg-primary {
@@ -807,7 +805,7 @@ button {
 }
 
 .font-secondary {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
 }
 
 .mb-10 {
@@ -957,7 +955,6 @@ button {
     background: #fff !important;
     position: relative;
     margin-top: 30px;
-   
 }
 
 .navigation .navbar-brand {
@@ -984,14 +981,13 @@ button {
     .navigation .navbar-brand img {
         height: 50px;
         width: auto;
-
     }
 }
 
 .navigation .navbar-brand img {
     position: relative;
     top: 50%;
-    
+
     transform: translateY(-50%);
 }
 
@@ -1216,7 +1212,7 @@ button {
 .hero-slider-item {
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: cover;    
+    background-size: cover;
     outline: 0;
 }
 
@@ -1389,7 +1385,7 @@ button {
 /* 5. progrgess bar start */
 .progressbar-title {
     font-size: 17px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     margin-bottom: 7px;
     color: #222 !important;
 }
@@ -1408,7 +1404,7 @@ button {
 }
 
 .progress-bar-value {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 600;
     color: #fff;
     background: #303032;
@@ -1444,7 +1440,7 @@ button {
 }
 
 .promo-video p {
-    font-family: "Work Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
 }
 
 /* promo video section end */
@@ -1531,7 +1527,7 @@ button {
 /* card */
 .card-img-wrapper {
     position: relative;
-    height: 30vh;
+    /*height: 30vh;*/
 }
 
 .card-img-wrapper::before {
@@ -1697,7 +1693,7 @@ button {
     text-align: center;
     background: #fff;
     box-shadow: -5px 0px 40px 0px rgba(0, 0, 0, 0.1);
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 700;
     font-size: 32px;
     color: #222;
@@ -2033,7 +2029,7 @@ img.arrow-bottom {
 }
 
 .tab-content-item h6 {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
     color: #222;
@@ -2060,7 +2056,7 @@ img.arrow-bottom {
     background: transparent;
     border: none;
     color: #000;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 600;
     transition: 0.3s ease;
 }
@@ -2226,7 +2222,7 @@ ul.tag-list li a:hover {
     height: 40px;
     margin-bottom: 15px;
     border: 1px solid #e5e5e5;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
     color: #666;
@@ -2566,18 +2562,20 @@ ul.tag-list li a:hover {
 
 .footer-links li::before {
     position: absolute;
-    font-family: "themify";
-    content: "\e649";
+    /* font-family: "themify"; */
+    content: "\003E";
     top: 0;
     left: -20px;
     height: 12px;
     width: auto;
-    color: #fff;
+    /* color: #fff; */
+    color: #666;
 }
 
 .footer-links li a {
-    color: #fff;
-    font-family: "Open Sans", sans-serif;
+    color: #666;
+    /* color: #fff; */
+    font-family: "Public Sans", sans-serif;
     font-size: 14px;
     transition: 0.2s ease;
     display: block;
@@ -2602,12 +2600,13 @@ ul.tag-list li a:hover {
     position: absolute;
     right: 5px;
     top: 5px;
-    border: 0;
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    color: #fff;
-    background: #0057b8;
+    color: #666;
+    font-size: 1.2rem;
+    border: 1px solid #0057b8;
+    background: none;
     transition: all linear 0.2s;
 }
 
@@ -2626,27 +2625,30 @@ ul.tag-list li a:hover {
     width: 50px;
     border-radius: 50%;
     color: #fff;
-    background: #303032;
+    background: #0057b8;
     top: -25px;
     right: 10px;
-    border: 1px solid #454547;
+    border: 1px solid #0057b8;
     text-align: center;
     display: block;
     transition: 0.2s ease;
+    font-size: 2rem;
 }
 
-.back-to-top i {
+.back-to-top span {
     line-height: 50px;
 }
 
 .back-to-top:hover {
-    border-color: #0057b8;
+    background: #2882e7;
+    border: 1px solid #2882e7;
 }
 
 .back-to-top:focus {
     outline: 0;
 }
-.serviceJ{
+
+.serviceJ {
     width: 50vw;
     border: 10px chartreuse;
 }
