--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2590,7 +2590,7 @@ ul.tag-list li a:hover {
 .form-control.subscribe {
     width: 100%;
     border-radius: 35px;
-    border: 0;
+    border: 1px solid grey;
     padding: 0 20px !important;
     height: 50px;
 }
