--- a/src/styles/crm.css
+++ b/src/styles/crm.css
@@ -1,11 +1,13 @@
-  .Layout{
-    padding-Top: 0;
-    padding-Bottom: 0;
-    min-height:90vh
-  }
-  
-  .Layout-children{
-    padding-Top: 20px;
-    padding-Bottom: 0;
+/** @format */
+
+.Layout {
+    padding-top: 0;
+    padding-bottom: 0;
+    min-height: 90vh;
+}
+
+.Layout-children {
+    padding-top: 20px;
+    padding-bottom: 0;
     min-width: 5vw;
-  }
+}
