:sparkles: New partnership page
New partnership page

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -313,6 +313,17 @@ h6,
     color: #fff;
 }
 
+.btn-outline-light {
+    background: transparent;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+.btn-outline-light:hover {
+    background: #303032;
+    color: #fff;
+}
+
 .btn-sm {
     padding: 13px 40px !important;
 }
