--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2648,6 +2648,7 @@ ul.tag-list li a:hover {
     border: 1px solid grey;
     padding: 0 20px !important;
     height: 50px;
+    font-size: 400;
 }
 
 /* subscribe button */
