:sparkles: test page; remove overflow css
test page; remove overflow css

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -183,7 +183,7 @@ body {
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
     font-size: 15px;
-    overflow-x: hidden !important;
+    /* overflow-x: hidden !important; */
 }
 
 p,
