--- a/src/styles/fof.css
+++ b/src/styles/fof.css
@@ -1,99 +1,102 @@
+/** @format */
+
 #fof * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .text-center {
-	text-align: center;
+    text-align: center;
 }
 .has-same-height {
     height: 320px;
     overflow: hidden;
 }
 .pricing-box-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .pricing-box {
-	background-color: #ffffff;
-	box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.5);
-	border-radius: 4px;
-	flex: 1;
-	padding: 0 30px 30px;
-	margin: 5%;
-	min-width: 250px;
-	max-width: 350px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+    flex: 1;
+    padding: 0 30px 30px;
+    margin: 5%;
+    min-width: 250px;
+    max-width: 350px;
 }
 
 .pricing-box:hover {
-    box-shadow: 0 12px 30px 0 rgba(0,0,0,.2);
-    -webkit-transform: translate3d(0,-4px,0);
-    transform: translate3d(0,-4px,0);
+    box-shadow: 0 12px 30px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
 }
 
 .pricing-box h5 {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .price {
-	margin: 24px 0;
-	font-size: 36px;
-	font-weight: 900;
-	padding-top: 40px;
+    margin: 24px 0;
+    font-size: 36px;
+    font-weight: 900;
+    padding-top: 40px;
 }
 
-.price sub, .price sup {
-	font-size: 16px;
-	font-weight: 100;
+.price sub,
+.price sup {
+    font-size: 16px;
+    font-weight: 100;
 }
 
 .features-list {
-	padding: 0;
-	list-style-type: none;
+    padding: 0;
+    list-style-type: none;
 }
 
 .features-list li {
-	font-weight: 100;
-	padding: 12px 0;
-	font-weight: 100;
-	text-align: left;
+    font-weight: 100;
+    padding: 12px 0;
+    font-weight: 100;
+    text-align: left;
 }
 
 .features-list li:not(:last-of-type) {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .btn-primary-fof {
-	border-radius: 25px;
-	border: none;
-	background-color: #0057b8;
-	color: #ffffff;
-	cursor: pointer;
-	padding: 10px 15px;
-	margin-top: 20px;
-	text-transform: uppercase;
-	transition: all 0.1s ease-in-out;
+    border-radius: 25px;
+    border: none;
+    background-color: #0057b8;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 10px 15px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    transition: all 0.1s ease-in-out;
 }
 
 .btn-primary-fof:hover {
-	box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.5);
-	transform: translateY(-3px);
+    box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.5);
+    transform: translateY(-3px);
 }
 
 .pricing-box-bg-image {
-	background-image: url('https://images.unsplash.com/photo-1550029402-226115b7c579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=701&q=80');
-	background-size: cover;
-	background-position: center center;
-	color: #ffffff;
+    background-image: url("https://images.unsplash.com/photo-1550029402-226115b7c579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=701&q=80");
+    background-size: cover;
+    background-position: center center;
+    color: #ffffff;
 }
 
 .pricing-box-bg-image .features-list li {
-	border-bottom-color: rgba(255, 255, 255, 1);
+    border-bottom-color: rgba(255, 255, 255, 1);
 }
 
 .pricing-box-bg-image .btn-primary-fof {
-	background-color: #ffffff;
-	color: #000;
+    background-color: #ffffff;
+    color: #000;
 }
