:lipstick: Update style on FOF
Update style on FOF

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -923,7 +923,7 @@ button {
 
 /* 2. Navigation */
 .top-header {
-    background: #151435;
+    background: #131a3b;
 }
 
 @media (max-width: 575px) {
