--- a/src/styles/fof.css
+++ b/src/styles/fof.css
@@ -41,7 +41,7 @@
 
 .price {
     margin: 24px 0;
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 900;
     padding-top: 40px;
 }
@@ -99,4 +99,78 @@
 .pricing-box-bg-image .btn-primary-fof {
     background-color: #ffffff;
     color: #000;
+}
+
+#pointer {
+    width: 180px;
+    height: 40px;
+    position: relative;
+    background: #0057b8;
+}
+#pointer-grey {
+    width: 200px;
+    height: 40px;
+    position: relative;
+    background: #303032;
+}
+#pointer:after,
+#pointer-grey:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-left: 20px solid white;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+}
+#pointer:before {
+    content: "";
+    position: absolute;
+    right: -20px;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-left: 20px solid #0057b8;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+}
+#pointer-grey:before {
+    content: "";
+    position: absolute;
+    right: -20px;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-left: 20px solid #303032;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+}
+
+.grid-parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 20px;
+    /* grid-row-gap: 20px; */
+}
+
+.div1 {
+    grid-area: 1 / 1 / 2 / 2;
+}
+.div2 {
+    grid-area: 1 / 2 / 2 / 3;
+}
+.div3 {
+    grid-area: 2 / 1 / 3 / 2;
+}
+.div4 {
+    grid-area: 2 / 2 / 3 / 3;
+}
+.div5 {
+    grid-area: 3 / 1 / 4 / 2;
+}
+.div6 {
+    grid-area: 3 / 2 / 4 / 3;
 }
