--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -635,7 +635,6 @@ button {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 160px 0 100px;
-    
 }
 
 @media (max-width: 575px) {
@@ -1804,7 +1803,7 @@ img.arrow-bottom {
 }
 
 .service-menu li.active a {
-    background: #303032;
+    background: #131a3b;
     color: #fff !important;
 }
 
@@ -1813,7 +1812,7 @@ img.arrow-bottom {
     content: "";
     height: 15px;
     width: 15px;
-    background: #303032;
+    background: #131a3b;
     top: 50%;
     right: -7px;
     transform: translateY(-50%) rotate(-45deg);
@@ -1827,7 +1826,7 @@ img.arrow-bottom {
 
 .service-menu li:hover a {
     color: #fff !important;
-    background: #303032;
+    background: #131a3b;
 }
 
 /* 14.5 clients */
